Correct misalignment with default list style.

--- a/app/assets/stylesheets/base/_lists.scss
+++ b/app/assets/stylesheets/base/_lists.scss
@@ -35,7 +35,7 @@ ul {
     width: 0px;
     height: 0px;
     left: -20px;
-    top: -5px;
+    top: 0;
   }
 }
 
